--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tape": "^4.9.0"
   },
   "scripts": {
-    "build": "rm dist/* -rf; parcel build --target node src/pseudonymization.ts",
+    "build": "rm dist/* -rf; parcel build src/pseudonymization.ts pseudonymization",
     "test": "mocha --require ts-node/register {src,src/*,test}/*test.ts*"
-  }
+  },
+  "main": "pseudonymization.js",
 }
