--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "build": "rm dist/* -rf; parcel build src/pseudonymization.ts pseudonymization",
     "test": "mocha --require ts-node/register {src,src/*,test}/*test.ts*"
   },
-  "main": "pseudonymization"
+  "main": "pseudonymization",
+  "typings": "pseudonymization"
 }
