--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "jsx": "react",
         "lib": ["es2017", "dom"],
         "noEmitOnError": true,
-        "allowUnreachableCode": true
+        "allowUnreachableCode": true,
+        "declaration": true
     },
     "include": [
         "src",
