--- a/package.json
+++ b/package.json
@@ -8,25 +8,21 @@
   "devDependencies": {
     "@types/assert": "^0.0.31",
     "@types/jasmine": "^2.8.8",
-    "mocha": "^5.1.1",
-    "parcel-bundler": "1.10.0",
-    "parcel-plugin-typescript": "^0.7.0",
-    "ts-node": "^6.0.0",
-    "typescript": "^2.8.3",
-    
-    
-    
     "chai": "^4.1.2",
     "doctest-ts": "^0.3.0",
-
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "faucet": "^0.0.1",
     "lato-font": "^3.0.0",
+    "mocha": "^5.1.1",
     "nyc": "^11.7.1",
+    "parcel-bundler": "1.10.0",
+    "parcel-plugin-typescript": "^0.7.0",
     "proptest": "^0.0.4",
     "tap-diff": "^0.1.1",
-    "tape": "^4.9.0"
+    "tape": "^4.9.0",
+    "ts-node": "^6.0.0",
+    "typescript": "^2.8.3"
   },
   "scripts": {
     "build": "tsc",
